[metadata]
name = energymon
version = 0.0.1
url = https://github.com/energymon/energymon-py
license_files = LICENSE-MIT LICENSE-APACHE
description = Python bindings to native energymon libraries
long_description = file: README.md
long_description_content_type = text/markdown
author = Connor Imes
classifiers =
    Topic :: System :: Monitoring
    Topic :: Utilities

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src
